force-app/main/default/objects/Customer__c/fields/FromCity__c.field-meta.xml
<CustomField>
    <fullName>FromCity__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>