force-app/main/default/objects/Customer__c/fields/FromCountry__c.field-meta.xml
<CustomField>
    <fullName>FromCountry__c</fullName>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>