force-app/main/default/objects/Customer__c/fields/FromEmail__c.field-meta.xml
<CustomField>
    <fullName>FromEmail__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>