force-app/main/default/objects/Customer__c/fields/FromPinCode__c.field-meta.xml
<CustomField>
    <fullName>FromPinCode__c</fullName>
    <label>PinCode</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>