force-app/main/default/objects/Customer__c/fields/FromState__c.field-meta.xml
<CustomField>
    <fullName>FromState__c</fullName>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>