force-app/main/default/objects/Customer__c/fields/ReceivingName__c.field-meta.xml
<CustomField>
    <fullName>ReceivingName__c</fullName>
    <label>Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>