force-app/main/default/objects/Customer__c/fields/ToCity__c.field-meta.xml
<CustomField>
    <fullName>ToCity__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>