force-app/main/default/objects/Customer__c/fields/ToEmail__c.field-meta.xml
<CustomField>
    <fullName>ToEmail__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>