force-app/main/default/objects/Customer__c/fields/ToPhone__c.field-meta.xml
<CustomField>
    <fullName>ToPhone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>