force-app/main/default/objects/Customer__c/fields/ToPinCode__c.field-meta.xml
<CustomField>
    <fullName>ToPinCode__c</fullName>
    <label>PinCode</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>