force-app/main/default/objects/Customer__c/fields/ToState__c.field-meta.xml
<CustomField>
    <fullName>ToState__c</fullName>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>