force-app/main/default/objects/Customer__c/fields/ToStreet__c.field-meta.xml
<CustomField>
    <fullName>ToStreet__c</fullName>
    <label>Street</label>
    <type>TextArea</type>
</CustomField>